fix: broken css

--- a/src/app/modules/home/home.component.scss
+++ b/src/app/modules/home/home.component.scss
@@ -94,5 +94,6 @@
 
   .register-button {
     padding: 30px 0;
+    margin-top: 40px;
   }
 }
